--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ per_page: 10
 <% end %>
 
 <% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%m %d %Y') %></span></h2>
   <p><%= article.summary %></p>
 <% end %>
 
