--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <!-- Use title if it's in the page YAML frontmatter -->
         <title><%= data.page.title || "RWpod" %></title>
+        <meta name="keywords" content="">
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <!-- Set the viewport width to device width for mobile -->
+      	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- For third-generation iPad with high-resolution Retina display: -->
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144-precomposed.png">
+        <!-- For iPhone with high-resolution Retina display: -->
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x114-precomposed.png">
+        <!-- For first- and second-generation iPad: -->
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72-precomposed.png">
+        <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+        <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
+
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <%= stylesheet_link_tag    "application", :media => "all" %>
