--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,28 @@
 pageable: true
 per_page: 10
 ---
-<!--
+
+<% page_articles.each_with_index do |article, i| %>
+  <article>
+
+    <h3><%= link_to article.title, article %></h3>
+    <h6><%= article.date.strftime('%m %d %Y') %>.</h6>
+
+    <div class="row">
+      <div class="six columns">
+        <p>asdasdasd</p>
+      </div>
+      <div class="six columns">
+        <img src="http://placehold.it/400x240&text=[img]" />
+      </div>
+    </div>
+    <%= article.summary %>
+
+  </article>
+
+  <hr />
+<% end %>
+
 <% if paginate %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
@@ -11,57 +32,8 @@ per_page: 10
   <% end %>
 <% end %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%m %d %Y') %></span></h2>
-  <p><%= article.summary %></p>
-<% end %>
-
 <% if paginate %>
   <% if next_page %>
     <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
--->
-<article>
-
-  <h3><a href="#">Blog Post Title</a></h3>
-  <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-
-  <div class="row">
-    <div class="six columns">
-      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-      <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-    </div>
-    <div class="six columns">
-      <img src="http://placehold.it/400x240&text=[img]" />
-    </div>
-  </div>
-
-  <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-  <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-</article>
-
-<hr />
-
-<article>
-
-  <h3><a href="#">Blog Post Title</a></h3>
-  <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-
-  <div class="row">
-    <div class="six columns">
-      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-      <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-    </div>
-    <div class="six columns">
-      <img src="http://placehold.it/400x240&text=[img]" />
-    </div>
-  </div>
-
-  <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-  <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-</article>
