--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -50,9 +50,7 @@
   <div class="row">
     <div class="three columns">
       <h1>
-        <% link_to "/" do %>
-          <img src="http://placehold.it/400x100&amp;text=Logo">
-        <% end %>
+        <%= link_to image_tag("http://placehold.it/400x100&amp;text=Logo"),  "/" %>
       </h1>
     </div>
     <div class="nine columns">
