--- a/source/partials/_main_links.html.erb
+++ b/source/partials/_main_links.html.erb
@@ -1,4 +1,4 @@
 <li class="<%= current_link_class("index.html") %>"><%= link_to 'Главная', '/' %></li>
-<li class="<%= current_link_class("tags/podcasts.html") %>"><%= link_to 'Подкасты', '/tags/podcasts.html' %></li>
-<li class="<%= current_link_class("tags/screencasts.html") %>"><%= link_to 'Скринкасты', '/tags/screencasts.html' %></li>
+<li class="<%= current_link_class("posts/categories/podcasts.html") %>"><%= link_to 'Подкасты', '/posts/categories/podcasts.html' %></li>
+<li class="<%= current_link_class("posts/categories/screencasts.html") %>"><%= link_to 'Скринкасты', '/posts/categories/screencasts.html' %></li>
 <li class="<%= current_link_class("about.html") %>"><%= link_to 'Про нас', '/about.html' %></li>
