--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -77,7 +77,7 @@
         <div class="four columns">
           <div class="panel right">
             <%= link_to 'iTunes', '/rss.xml', class: "fc-webicon apple large" %>
-            <%= link_to 'RSS', '/rss.xml', class: "fc-webicon rss large" %>
+            <%= link_to 'RSS', 'http://feeds.feedburner.com/rwpod', class: "fc-webicon rss large" %>
             <%= link_to 'Twitter', 'https://twitter.com/rwpod', class: "fc-webicon twitter large" %>
             <%= link_to 'Facebook', 'http://www.facebook.com/rwpod', class: "fc-webicon facebook large" %>
           </div>
