--- a/source/posts/2012-01-01-example-article.html.md.erb
+++ b/source/posts/2012-01-01-example-article.html.md.erb
@@ -5,6 +5,11 @@ tags:
  - podcasts
  - screencasts
 duration: "00:33:00"
+audio_url: "https://dl.dropbox.com/u/930565/1.mp3"
+audio_length: 3326955
+duration: "00:03:28"
 ---
 
 This is an example article. You probably want to delete it and write your own articles!
+
+<%= audio_tag %>
