--- a/source/posts/2013-01-02-example-article2.html.md.erb
+++ b/source/posts/2013-01-02-example-article2.html.md.erb
@@ -4,14 +4,16 @@ date: 2013-01-02
 tags: 
  - podcasts
  - example 2
-duration: "00:32:00"
+audio_url: "https://dl.dropbox.com/u/930565/1.mp3"
+audio_length: 3326955
+duration: "00:03:28"
 ---
 
 This is an example article. You probably want to delete it and write your own articles!
 
 READMORE
 
-<audio class="podcast_player" src="https://dl.dropbox.com/u/930565/%D1%82%D0%B5%D0%BC%D0%B0_%D0%B8%D0%B7_%D0%A4%D0%BE%D1%80%D0%B4%D0%B0_%D0%91%D0%BE%D1%8F%D1%80%D0%B4%D0%B0___%D0%91%D0%B5%D0%B7_%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F.mp3" preload="none" />
+<%= audio_tag %>
 
 This is an example article. You probably want to delete it and write your own articles!
 
