--- a/source/posts/2012-01-01-example-article.html.md.erb
+++ b/source/posts/2012-01-01-example-article.html.md.erb
@@ -11,3 +11,5 @@ duration: "00:03:28"
 ---
 
 This is an example article. You probably want to delete it and write your own articles!
+
+<%= audio_tag %>
