separate podcasts and screencasts

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -75,12 +75,11 @@
           </h2>
         </div>
         <div class="four columns">
-          <div class="panel right">
-            <%= link_to 'iTunes', '/rss.xml', class: "fc-webicon apple large" %>
-            <%= link_to 'RSS', 'http://feeds.feedburner.com/rwpod', class: "fc-webicon rss large" %>
-            <%= link_to 'Twitter', 'https://twitter.com/rwpod', class: "fc-webicon twitter large" %>
-            <%= link_to 'Facebook', 'http://www.facebook.com/rwpod', class: "fc-webicon facebook large" %>
-          </div>
+          <% if content_for?(:subscribe_panel) %>
+            <%= yield_content :subscribe_panel %>
+          <% else %>
+            <%= partial "partials/subscribe_box" %>
+          <% end %>
         </div>
       </div>
       <hr />
@@ -147,7 +146,7 @@
       </div>
     </div>
   </footer>
-  
+
 <!--
    <aside>
       <h2>Recent Articles</h2>
