--- a/source/posts/2013-01-02-example-article2.html.md.erb
+++ b/source/posts/2013-01-02-example-article2.html.md.erb
@@ -1,9 +1,8 @@
 ---
 title: Example Article 2
 date: 2013-01-02
-tags: 
- - podcasts
- - example 2
+tags:
+ - screencasts
 audio_url: "https://dl.dropbox.com/u/930565/1.mp3"
 audio_length: 3326955
 duration: "00:03:28"
