--- a/source/partials/_main_links.html.erb
+++ b/source/partials/_main_links.html.erb
@@ -1,4 +1,8 @@
 <li class="<%= current_link_class("index.html") %>"><%= link_to 'Главная', '/' %></li>
-<li class="<%= current_link_class("posts/categories/podcasts.html") %>"><%= link_to 'Подкасты', "/posts/categories/podcasts.html" %></li>
-<li class="<%= current_link_class("posts/categories/screencasts.html") %>"><%= link_to 'Скринкасты', "/posts/categories/screencasts.html" %></li>
+<% if blog.tags["podcasts"] && blog.tags["podcasts"].length > 0 %>
+  <li class="<%= current_link_class("posts/categories/podcasts.html") %>"><%= link_to 'Подкасты', "/posts/categories/podcasts.html" %></li>
+<% end %>
+<% if blog.tags["screencasts"] && blog.tags["screencasts"].length > 0 %>
+  <li class="<%= current_link_class("posts/categories/screencasts.html") %>"><%= link_to 'Скринкасты', "/posts/categories/screencasts.html" %></li>
+<% end %>
 <li class="<%= current_link_class("about.html") %>"><%= link_to 'Про нас', '/about.html' %></li>
