--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -8,7 +8,7 @@ per_page: 25
   <% end %>
 <% end %>
 
-<h1>Articles tagged '<%= tagname %>'</h1>
+<h1>Тег '<%= tagname %>'</h1>
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
