--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -14,7 +14,7 @@ pageable: true
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%d %m') %></span></li>
+    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %d') %></span></li>
   <% end %>
 </ul>
 
