--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,18 +7,26 @@ per_page: 10
   <article>
 
     <h3><%= link_to article.title, article %></h3>
-    <h6><%= article.date.strftime('%m %d %Y') %>.</h6>
+    <h6><%= article.date.strftime('%m.%d.%Y') %></h6>
 
     <div class="row">
-      <div class="six columns">
-        <p>asdasdasd</p>
+      <div class="eight columns">
+        <p><%= article.summary %></p>
       </div>
-      <div class="six columns">
-        <img src="http://placehold.it/400x240&text=[img]" />
+      <div class="four columns">
+        <img src="<%= article.data.main_image || "http://placehold.it/200x150&text=[img]" %>" alt="<%= article.title %>" />
       </div>
     </div>
-    <%= article.summary %>
-
+    
+    <div class="row">
+      <div class="twelve columns">
+        <ul class="inline-list">
+          <% article.tags.each do |tag| %>
+            <li><a href="<%= tag_path tag %>"><%= tag %></a></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
   </article>
 
   <hr />
