--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ per_page: 10
   <article>
 
     <h3><%= link_to article.title, article %></h3>
-    <h6><%= article.date.strftime('%m.%d.%Y') %></h6>
+    <h6><%= article.date.strftime('%m.%d.%Y') %>, <%= link_to "0 comments", "/#{article.path}#disqus_thread" %></h6>
 
     <div class="row">
       <div class="eight columns">
