--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,34 +5,7 @@ per_page: 10
 
 <% page_articles.each_with_index do |article, i| %>
   <article>
-
-    <h3><%= link_to article.title, article %></h3>
-    <h6><%= article.date.strftime('%m.%d.%Y') %>, <%= link_to "0 comments", "/#{article.path}#disqus_thread" %></h6>
-
-    <div class="row">
-      <% if article.data.main_image %>
-        <div class="eight columns">
-          <p><%= article.summary %></p>
-        </div>
-        <div class="four columns">
-          <img src="<%= article.data.main_image || "http://placehold.it/200x150&text=[img]" %>" alt="<%= article.title %>" />
-        </div>
-      <% else %>
-        <div class="twelve columns">
-          <p><%= article.summary %></p>
-        </div>
-      <% end %>
-    </div>
-    
-    <div class="row">
-      <div class="twelve columns">
-        <ul class="inline-list">
-          <% article.tags.each do |tag| %>
-            <li><a href="<%= tag_path tag %>"><%= tag %></a></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
+    <%= partial "partials/article", locals: { article: article } %>
   </article>
 
   <hr />
