--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -96,48 +96,8 @@
     <!-- Main Blog Content -->
     <div class="nine columns" role="content">
       <% if is_blog_article? # show blog %>
-        <h1><%= current_article.title %></h1>
-        <h6><%= current_article.date.strftime('%m.%d.%Y') %>, <%= link_to "0 comments", "/#{current_article.path}#disqus_thread" %></h6>
-        
-        <div class="row">
-          <% if current_article.data.main_image %>
-            <div class="eight columns">
-              <p><%= yield %></p>
-            </div>
-            <div class="four columns">
-              <img src="<%= current_article.data.main_image || "http://placehold.it/200x150&text=[img]" %>" alt="<%= current_article.title %>" />
-            </div>
-          <% else %>
-            <div class="twelve columns">
-              <p><%= yield %></p>
-            </div>
-          <% end %>
-        </div>
-        
-        <div class="row">
-          <div class="twelve columns">
-            <ul class="inline-list">
-              <% current_article.tags.each do |tag| %>
-                <li><a href="<%= tag_path tag %>"><%= tag %></a></li>
-              <% end %>
-            </ul>
-          </div>
-        </div>
-        
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'rwpod'; // required: replace example with your forum shortname
-
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        <%= partial "partials/article", locals: { article: current_article, yield_obj: yield } %>
+        <%= partial "partials/article_comments" %>
       <% else %>
         <%= yield %>
       <% end %>
