--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -1,6 +1,9 @@
 <div class="subscribe-box right">
   <%= link_to 'iTunes', (defined?(itunes_path) ? itunes_path : '/rss.xml'), class: "fc-webicon apple large" %>
+  &nbsp;
   <%= link_to 'RSS', (defined?(rss_path) ? rss_path : 'http://feeds.feedburner.com/rwpod'), class: "fc-webicon rss large" %>
+  &nbsp;
   <%= link_to 'Twitter', 'https://twitter.com/rwpod', class: "fc-webicon twitter large" %>
+  &nbsp;
   <%= link_to 'Facebook', 'http://www.facebook.com/rwpod', class: "fc-webicon facebook large" %>
 </div>
