--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -137,7 +137,11 @@
       <hr />
       <div class="row">
         <div class="six columns">
-          <p>&copy; <%= default_footer_copyright_helper %></p>
+          <p>
+            &copy; <%= default_footer_copyright_helper %>
+            &nbsp;
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a>
+          </p>
         </div>
         <div class="six columns">
           <ul class="inline-list right">
