--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -11,6 +11,7 @@
     <title><%= data.page.title ? "#{data.page.title} | #{default_title_helper}" : default_title_helper %></title>
     <meta name="keywords" content="<%= default_keywords_helper %>">
     <meta name="description" content="<%= default_description_helper %>">
+    <link type="text/plain" rel="author" href="/humans.txt" />
     <!-- Set the viewport width to device width for mobile -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- For third-generation iPad with high-resolution Retina display: -->
