--- a/source/feeds/rss.xsl.erb
+++ b/source/feeds/rss.xsl.erb
@@ -6,7 +6,7 @@
 	<xsl:template match="/">
 		<html xmlns="http://www.w3.org/1999/xhtml">
 			<head>
-				<title><%= default_title_helper %> RSS Feed</title>
+				<title><%=h default_title_helper %> RSS Feed</title>
 				<meta charset="utf-8" />
 				<style type="text/css">
 					body {
@@ -56,7 +56,7 @@
 				</style>
 			</head>
 			<body>
-				<h1><%= default_title_helper %> RSS Feed</h1>
+				<h1><%=h default_title_helper %> RSS Feed</h1>
 				<div id="intro">
 				  <img title="<%=h default_title_helper %>" alt="<%=h default_title_helper %>" src="<%= default_image_helper %>" />
 					<p><%=h default_long_description_helper %></p>
