--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -4,4 +4,45 @@ pageable: true
 per_page: 25
 title: "Про нас"
 ---
-<h1>Про нас</h1>
+
+<div class="row">
+  <div class="twelve columns">
+    <h1>Про нас</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="four columns">
+    <%= image_tag "about/alexey.png" %>
+  </div>
+  <div class="eight columns">
+    <h3>Алексей Васильев</h3>
+    <ul class="inline-list people-social-icons">
+      <li><a class="fc-webicon twitter" href="https://twitter.com/leopard_me">Twitter</a></li>
+      <li><a class="fc-webicon github" href="https://github.com/le0pard">Github</a></li>
+      <li><a class="fc-webicon linkedin" href="http://www.linkedin.com/in/le0pard">Linkedin</a></li>
+      <li><a class="fc-webicon facebook" href="http://www.facebook.com/leopard.not.a">Facebook</a></li>
+      <li><a class="fc-webicon googleplus" href="https://plus.google.com/108647800055603756903/about">GooglePlus</a></li>
+    </ul>
+    <p>Ruby on Rails разработчик и Linux администратор в компании Railsware. Является автором таких продуктов как: <a href="http://popcornua.coocoorooza.com/">PopCornUA</a>, <a href="http://mongodb-logger.catware.org/">MongodbLogger</a>, <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a> и многих других.</p>
+    <p>Алексей является автором открытого учебного пособия по <a href="http://postgresql.leopard.in.ua">PostgreSQL на русском языке</a>. Активный докладчик в различных IT конференциях.</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="eight columns">
+    <h3>Александр Чаплинский</h3>
+    <ul class="inline-list people-social-icons">
+      <li><a class="fc-webicon twitter" href="https://twitter.com/chalexr">Twitter</a></li>
+      <li><a class="fc-webicon github" href="https://github.com/alchapone">Github</a></li>
+      <li><a class="fc-webicon linkedin" href="http://www.linkedin.com/pub/alexander-chaplinsky/34/2a3/3a0">Linkedin</a></li>
+      <li><a class="fc-webicon facebook" href="http://www.facebook.com/profile.php?id=1433185383">Facebook</a></li>
+      <li><a class="fc-webicon googleplus" href="https://plus.google.com/102030190358547710801/about">GooglePlus</a></li>
+    </ul>
+    <p>Ruby on Rails, JavaScript разработчик и cпециалист по верстке в компании Railsware. Является автором таких продуктов как: <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a>, <a href="https://github.com/alchapone/smartstart">SmartStart</a>, <a href="https://github.com/alchapone/ajaxform">AjaxForm</a> и многих других.</p>
+    <p>Александр является инструктором по версте при компании Railsware.</p>
+  </div>
+  <div class="four columns">
+    <%= image_tag "about/alex.png" %>
+  </div>
+</div>
