--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -8,7 +8,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= data.page.title ? "#{data.page.title} | #{default_title_helper}" : default_title_helper %></title>
+    <title>
+      <% if content_for?(:title) %>
+        <%= yield_content :title %> | <%= default_title_helper %>
+      <% else %>
+        <%= data.page.title ? "#{data.page.title} | #{default_title_helper}" : default_title_helper %>
+      <% end %>
+    </title>
     <meta name="keywords" content="<%= default_keywords_helper %>">
     <meta name="description" content="<%= default_description_helper %>">
     <link type="text/plain" rel="author" href="/humans.txt" />
