--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -7,6 +7,7 @@ per_page: 25
     <%= tag_subscribe_panel(tagname) %>
   <% end %>
 <% end %>
+<% content_for :title, "Тег #{tagname}" %>
 
 <h1>Тег '<%= tagname %>'</h1>
 
