--- a/source/css/ui.css.sass
+++ b/source/css/ui.css.sass
@@ -1,5 +1,26 @@
 @import "foundation"
 
+.main-nav-bar
+  border-bottom: 3px solid #00B6DE
+  background: #111
+  color: #fff
+  li
+    border-left: 1px solid #000
+    border-right: none
+    a
+      font-weight: bold
+      border-left: 1px solid #333
+      border-right: none
+  li.active
+    background: #333
+
+.main-block
+  background: #FFF
+  box-shadow: 0 0 15px rgba(0,0,0,0.13)
+  -moz-box-shadow: 0 0 15px rgba(0,0,0,0.13)
+  -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.13)
+    
+
 .subscribe-box
   padding: 20px
   a
