--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -66,7 +66,7 @@
       </h1>
     </div>
     <div class="nine columns">
-      <ul class="nav-bar">
+      <ul class="nav-bar main-nav-bar">
         <%= partial "partials/main_links" %>
       </ul>
     </div>
@@ -99,7 +99,7 @@
 
   <!-- Main Page Content and Sidebar -->
 
-  <div class="row">
+  <div class="row main-block">
 
     <!-- Main Blog Content -->
     <div class="nine columns" role="content">
