--- a/source/css/application.css
+++ b/source/css/application.css
@@ -1,6 +1,7 @@
 /* 
  *= require ./vendors/fc-webicons
  *= require ./vendors/pygments
+ *= require ./vendors/icons/general_foundicons
  *= require ./audiojs
  *= require ./ui
  */
