--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="three columns">
       <h1>
-        <%= link_to image_tag("http://placehold.it/400x100&amp;text=Logo"),  "/" %>
+        <%= link_to image_tag("http://placehold.it/400x100&amp;text=Logo", alt: "logo"),  "/" %>
       </h1>
     </div>
     <div class="nine columns">
