--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -13,7 +13,7 @@ title: "Про нас"
 
 <div class="row">
   <div class="four columns">
-    <%= image_tag "about/alexey.png" %>
+    <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
   </div>
   <div class="eight columns">
     <h3>Алексей Васильев</h3>
@@ -43,6 +43,6 @@ title: "Про нас"
     <p>Александр является инструктором по версте при компании Railsware.</p>
   </div>
   <div class="four columns">
-    <%= image_tag "about/alex.png" %>
+    <%= image_tag "about/alex.png", alt: "Александр Чаплинский" %>
   </div>
 </div>
