--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -6,8 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <!-- Use title if it's in the page YAML frontmatter -->
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>
       <% if content_for?(:title) %>
         <%= yield_content :title %> | <%= default_title_helper %>
@@ -102,7 +101,7 @@
   <div class="row main-block">
 
     <!-- Main Blog Content -->
-    <div class="nine columns" role="content">
+    <div class="nine columns">
       <% if is_blog_article? # show blog %>
         <%= partial "partials/article", locals: { article: current_article, yield_obj: yield } %>
         <%= partial "partials/article_comments" %>
