--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -33,6 +33,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
+    <!-- rss -->
+    <link href="<%= default_feeds_url_helper %>/rwpod" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml">
     <!-- GA BEGIN -->
     <script type="text/javascript">
 
@@ -146,7 +148,7 @@
           <p>
             &copy; <%= default_footer_copyright_helper %>
             &nbsp;
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a>
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a>
           </p>
         </div>
         <div class="six columns">
