--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -1,5 +1,9 @@
-<h3><%= article_icon(article) %><%= link_to article.title, article %></h3>
-<h6><%= article.date.strftime('%m.%d.%Y') %>, <%= link_to "0 Comments and 0 Reactions", "/#{article.path}#disqus_thread" %></h6>
+<h3>
+  <% link_to article do %>
+    <%= article_icon(article) %><%= article.title %>
+  <% end %>
+</h3>
+<h6><%= article.date.strftime('%d.%m.%Y') %>, <%= link_to "0 Comments and 0 Reactions", "/#{article.path}#disqus_thread" %></h6>
 
 <div class="row">
   <% if article.data.main_image %>
