--- a/source/css/ui.css.sass
+++ b/source/css/ui.css.sass
@@ -1,16 +1,25 @@
+@import "settings"
 @import "foundation"
 
+h1.logo a
+  vertical-align: middle
+  i.logo-mic
+    padding: 0
+    margin: 0
+  .r
+    font-style: normal
+    color: #ba1b1b
+
 .main-nav-bar
+  border-left: 1px solid #000
+  border-right: none
   border-bottom: 3px solid #00B6DE
   background: #111
   color: #fff
-  li
-    border-left: 1px solid #000
+  li a
+    font-weight: bold
+    border-left: 1px solid #333
     border-right: none
-    a
-      font-weight: bold
-      border-left: 1px solid #333
-      border-right: none
   li.active
     background: #333
 
@@ -19,7 +28,12 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.13)
   -moz-box-shadow: 0 0 15px rgba(0,0,0,0.13)
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.13)
-    
+  padding: 5px 20px
+
+.article-icon
+  padding: 5px 5px 0 0
+  text-align: center
+  vertical-align: middle
 
 .subscribe-box
   padding: 20px
@@ -28,3 +42,6 @@
 
 .people-social-icons a
   margin: 0 2px!important
+  
+.main-footer
+  padding-top: 20px
