--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -62,8 +62,7 @@
   <div class="row">
     <div class="three columns">
       <h1 class="logo">
-        <%#= link_to "<i class=\"foundicon-mic logo-mic\"></i> <i class=\"r\">R</i>Wpod", "/" %>
-        <%= image_tag("logo.png", alt: default_title_helper, title: default_title_helper) %>
+        <%= link_to image_tag("logo.png", alt: default_title_helper, title: default_title_helper), "/" %>
       </h1>
     </div>
     <div class="nine columns">
@@ -93,7 +92,6 @@
   </div>
 
   <!-- End Nav -->
-
 
   <!-- Main Page Content and Sidebar -->
 
