--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -1,5 +1,5 @@
 <div class="subscribe-box right">
-  <%= link_to 'iTunes', "#{default_itunes_url_helper}#{defined?(rss_path) ? rss_path : "/rwpod"}", class: "fc-webicon apple large" %>
+  <%= link_to 'iTunes', (defined?(rss_path) ? "#{default_itunes_url_helper}#{rss_path}" : "https://itunes.apple.com/ru/podcast/rwpod-podkast-pro-mir-ruby/id597248066"), class: "fc-webicon apple large" %>
   <%= link_to 'RSS', "#{default_feeds_url_helper}#{defined?(rss_path) ? rss_path : "/rwpod"}", class: "fc-webicon rss large" %>
   <%= link_to 'Twitter', 'https://twitter.com/rwpod', class: "fc-webicon twitter large" %>
   <%= link_to 'Facebook', 'http://www.facebook.com/rwpod', class: "fc-webicon facebook large" %>
