--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -113,7 +113,7 @@
     <aside class="three columns">
       
       <div class="panel">
-        <h5>Есть чем поделится с нами? <%= hex_mail_to 'leopard.at.work@gmail.com', "Напишите нам." %></h5>
+        <h5>Есть чем поделится с нами? <%= hex_mail_to default_email_helper, "Напишите нам." %></h5>
       </div>
 
       <h5>Архив</h5>
