--- a/source/partials/_main_links.html.erb
+++ b/source/partials/_main_links.html.erb
@@ -5,4 +5,4 @@
 <% if blog.tags["screencasts"] && blog.tags["screencasts"].length > 0 %>
   <li class="<%= current_link_class("posts/categories/screencasts.html") %>"><%= link_to 'Скринкасты', "/posts/categories/screencasts.html" %></li>
 <% end %>
-<li class="<%= current_link_class("about.html") %>"><%= link_to 'Про нас', '/about.html' %></li>
+<li class="<%= current_link_class("about.html") %>"><%= link_to 'О нас', '/about.html' %></li>
