--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -2,12 +2,12 @@
 ---
 pageable: true
 per_page: 25
-title: "Про нас"
+title: "О нас"
 ---
 
 <div class="row">
   <div class="twelve columns">
-    <h1>Про нас</h1>
+    <h1>О нас</h1>
   </div>
 </div>
 
