--- a/source/api/podcasts.json.erb
+++ b/source/api/podcasts.json.erb
@@ -1,1 +1,7 @@
-<%= MultiJson.dump(blog.tags["podcasts"][0..10].map {|article| {title: article.title, description: article.body, date: article.date.to_s(:rfc822), link: "#{default_main_url_helper}#{article.url}", } }) %>
+<%= MultiJson.dump(blog.tags["podcasts"][0..10].map do |article| 
+  {title: article.title, 
+  description: article.body, 
+  date: article.date.to_s(:rfc822), 
+  link: "#{default_main_url_helper}#{article.url}", 
+  main_img: (article.data.main_image ? "#{default_main_url_helper}#{article.data.main_image}" : default_image_helper)} 
+end) %>
